Fix issue where index arrow can overlap text.
Fixed the arrow being able to overlap (and thus render
unreadable) important text on the index page by setting the
background of text divs to the background color and lowering
the z-index of the arrow tremendously.

--- a/css/index.scss
+++ b/css/index.scss
@@ -65,11 +65,17 @@ $video-player-width: unquote("min(75vw, 400px)");
 .down-arrow-container {
     position: fixed;
     bottom: 50px;
+    z-index: -100;
 }
 
 #down-arrow {
     width: 30px;
     opacity: 0;
+}
+
+/* To prevent the arrow from overwriting any important data */
+main div {
+    background-color: $black;
 }
 
 
